--- a/www/static/index.html
+++ b/www/static/index.html
@@ -7,9 +7,15 @@
 		<div class="text"></div>
 		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript">
-			$.getJSON('countries.json', function(data){
-				for(countrie of data){
-					$('div.text').append('<p>' + countrie.capital + '</p>');
+			$.getJSON('http://192.168.55.55/advert.php', function(data){
+                var i=0;
+				for(adv of data){
+                    i++;
+					$('body').append('<div class = item>'+
+                    '<img src="placehold.it/150x150">'+
+                    '<h1>' + adv.title + '</h1>'+
+                    '<p>' + adv.text + '</p>' +
+                    '</div>');
 				}
 			})
 		</script>
