Added source field.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -66,7 +66,8 @@
 		<script>
 			$(document).ready(function(){
 				$('.tabs-content').salo({
-					links: $('.tabs-nav')
+					links: $('.tabs-nav'),
+					source: 'http://192.168.55.55/adverts.php'
 				});
 
 				$(document).foundation();
