--- a/www/static/index.html
+++ b/www/static/index.html
@@ -6,9 +6,15 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Foundation Template | Contact</title>
-		<link rel="stylesheet" href="css/foundation.css"/>
-		<link rel="stylesheet" href="css/custom.css"/>
+		<link rel="stylesheet" type="text/css" href="css/foundation.css"/>
+		<link rel="stylesheet" type="text/css" href="css/custom.css"/>
+		<link rel="stylesheet" type="text/css" href="css/foundation-datepicker.css">
 		<script src="js/vendor/modernizr.js"></script>
+		<style type="text/css tabindex="0"">
+			.tr{
+				text-align: right;
+			}
+		</style>
 	</head>
 	<body>
 		<nav class="top-bar" data-topbar>
@@ -37,9 +43,72 @@
 					</section>
 				</div>
 			</div>
-
 		</div>
 
+		<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+		<fieldset>
+			<legend>New advert</legend>
+				<div class="large-5 columns">
+					<div class="modal image" style="background-image: url('http://placehold.it/1000x1000&amp;text=Upload image');"> </div>
+				</div>
+				<div class="large-7 columns">
+
+					<div class="large-3 columns tr">Title</div>
+					<div class="large-9 columns">
+						<input type="text" tabindex="0" autocomplete="off" name="Title"  data-type="title" data-sid="title" placeholder="Title">
+					</div>
+
+					<div class="large-3 columns tr">Description</div>
+					<div class="large-9 columns">
+						<textarea tabindex="0" data-type="text" name="Description" data-sid="text" placeholder="Description"></textarea>
+					</div>
+
+					<div class="large-3 columns tr">End Date</div>
+					<div class="large-9 columns">
+						<div class="row collapse postfix-radius">
+							<div class="small-9 columns">
+								<input type="text" tabindex="0" class="endDatePicker" autocomplete="off" name="End Date" data-type="date" data-sid="endDate" placeholder="Offer end date" readonly>
+							</div>
+							<div class="small-3 columns">
+								<span class="postfix">Date</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="large-3 columns tr">Category</div>
+					<div class="large-9 columns">
+						<select data-type="category" name="Category" data-sid="categoryId">
+							<option></option>
+							<option value="husker">Husker</option>
+							<option value="starbuck">Starbuck</option>
+							<option value="hotdog">Hot Dog</option>
+							<option value="apollo">Apollo</option>
+						</select>
+					</div>
+
+					<div class="large-3 columns tr">Email</div>
+					<div class="large-9 columns">
+						<input type="text" tabindex="0" autocomplete="off" name="Email" data-type="email" data-sid="email" placeholder="Email address">
+					</div>
+
+					<div class="large-3 columns tr">Phone</div>
+					<div class="large-9 columns">
+						<input type="text" tabindex="0" autocomplete="off" name="Number" data-type="number" data-sid="phone" placeholder="Phone number">
+					</div>
+
+					<div class="large-3 columns tr"></div>
+					<div class="large-9 columns">
+						<a href="#" tabindex="0" class="sbmt button expand success">Submit</a>
+					</div>
+				</div>
+				<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+			</fieldset>
+		</div>
+
+	<!-- 		<h2 id="modalTitle">Awesome. I have it.</h2>
+			<p class="lead">Your couch.  It is mine.</p>
+			<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p> -->
+		</div>
 
 		<footer class="row">
 			<div class="large-12 columns">
@@ -62,13 +131,23 @@
 
 		<script type="text/javascript" src="js/vendor/jquery.js"></script>
 		<script type="text/javascript" src="js/foundation.min.js"></script>
+		<script type="text/javascript" src="js/foundation-datepicker.js"></script>
 		<script type="text/javascript" src="js/salo.jquery.js"></script>
+
 		<script>
 			$(document).ready(function(){
 				$('.tabs-content').salo({
 					links: $('.tabs-nav'),
 					source: 'http://192.168.55.55/adverts.php'
 				});
+
+				$('.endDatePicker').fdatepicker({
+					onRender: function (date) {
+						return date.valueOf() <= Date.now() ? 'disabled' : '';
+					}
+				});
+				
+				$('#myModal').foundation('reveal', 'open');
 
 				$(document).foundation();
 
