Added error message handler.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -30,6 +30,7 @@
 			<div class="large-2 columns">
 				<ul class="side-nav categories tabs-nav" data-tab>
 					<li class="tab-title active" role="presentational" ><a href="#main" role="tab" tabindex="0" aria-selected="true" controls="main">Back to main</a></li>
+					<!--Adverts goes here-->
 				</ul>
 			</div>
 			<div class="large-10 columns">
@@ -42,6 +43,8 @@
 			</div>
 		</div>
 
+
+		<!--Modal NEW ADVERT form-->
 		<div id="newAdvert" class="reveal-modal large" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 			<fieldset>
 				<legend>New advert</legend>
