--- a/www/static/index.html
+++ b/www/static/index.html
@@ -29,9 +29,9 @@
                         </ul>
                     </li> -->
                     <li class="divider"></li>
-                    <li><a href="#" data-reveal-id="newAdvert">New Advert</a></li>
+                    <li><a href="#" class="translateMe" data-tid="newAdvert" data-reveal-id="newAdvert">New Advert</a></li>
                     <li class="divider"></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="#" class="translateMe" data-tid="login">Login</a></li>
                 </ul>
             </section>
         </nav>
@@ -39,7 +39,7 @@
         <div class="large-12 columns">
             <div class="large-2 columns">
                 <ul class="side-nav categories tabs-nav" data-tab>
-                    <li class="tab-title active" role="presentational" ><a href="#main" role="tab" tabindex="0" aria-selected="true" controls="main">Back to main</a></li>
+                    <li class="tab-title active" role="presentational" ><a href="#main" role="tab" tabindex="0" aria-selected="true" controls="main" class="translateMe"  data-tid="backToMain">Back to main</a></li>
                     <!--Adverts goes here-->
                 </ul>
             </div>
@@ -57,54 +57,54 @@
         <!--Modal NEW ADVERT form-->
         <div id="newAdvert" class="reveal-modal large" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
             <fieldset>
-                <legend>New advert</legend>
+                <legend class="translateMe" data-tid="newAdvert">New advert</legend>
                 <div class="large-5 columns">
                     <div class="modal image" style="background-image: url('http://placehold.it/1000x1000&amp;text=Upload image');"> </div>
                 </div>
                 <div class="large-7 columns">
 
-                    <div class="large-3 columns tr">Title</div>
+                    <div class="large-3 columns tr translateMe" data-tid="title">Title</div>
                     <div class="large-9 columns">
                         <input type="text" tabindex="0" autocomplete="off" name="Title"  data-type="title" data-sid="title" placeholder="Title">
                     </div>
 
-                    <div class="large-3 columns tr">Description</div>
+                    <div class="large-3 columns tr translateMe" data-tid="description">Description</div>
                     <div class="large-9 columns">
                         <textarea tabindex="0" data-type="text" name="Description" data-sid="text" placeholder="Description"></textarea>
                     </div>
 
-                    <div class="large-3 columns tr">End Date</div>
+                    <div class="large-3 columns tr translateMe" data-tid="endDate">End Date</div>
                     <div class="large-9 columns">
                         <div class="row collapse postfix-radius">
                             <div class="small-9 columns">
                                 <input type="text" tabindex="0" class="endDatePicker" autocomplete="off" name="End Date" data-type="date" data-sid="endDate" placeholder="Offer end date" readonly>
                             </div>
                             <div class="small-3 columns">
-                                <span class="postfix">Date</span>
+                                <span class="postfix translateMe" data-tid="date">Date</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="large-3 columns tr">Category</div>
+                    <div class="large-3 columns tr translateMe" data-tid="category">Category</div>
                     <div class="large-9 columns">
                         <select data-type="category" name="Category" data-sid="categoryId">
                             <option></option>
                         </select>
                     </div>
 
-                    <div class="large-3 columns tr">Email</div>
+                    <div class="large-3 columns tr translateMe" data-tid="email">Email</div>
                     <div class="large-9 columns">
                         <input type="text" tabindex="0" autocomplete="off" name="Email" data-type="email" data-sid="email" placeholder="Email address">
                     </div>
 
-                    <div class="large-3 columns tr">Phone</div>
+                    <div class="large-3 columns tr translateMe translateMe" data-tid="phone">Phone</div>
                     <div class="large-9 columns">
                         <input type="text" tabindex="0" autocomplete="off" name="Number" data-type="number" data-sid="phone" placeholder="Phone number">
                     </div>
 
                     <div class="large-3 columns tr"></div>
                     <div class="large-9 columns">
-                        <a href="#" tabindex="0" class="sbmt button expand success">Submit</a>
+                        <a href="#" tabindex="0" class="sbmt button expand success translateMe" data-tid="submit">Submit</a>
                     </div>
                 </div>
                 <a class="close-reveal-modal" aria-label="Close">&#215;</a>
@@ -123,7 +123,7 @@
                 <hr/>
                 <div class="row">
                     <div class="large-6 columns">
-                        <p>&copy; Copyright no one at all. Go to town.</p>
+                        <p>&copy; <span class="translateMe" data-tid="footer">Copyright no one at all. Go to town.</span></p>
                     </div>
                     <div class="large-6 columns">
                         <ul class="inline-list right">
