Added placeholder till script will finish rendering.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -12,6 +12,9 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
+        <div class="loading">
+            <img src="">
+        </div>
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
                 <li class="name"><h1><a href="#">SALO</a></h1></li>
@@ -32,6 +35,11 @@
                     <li><a href="#" class="translateMe" data-tid="newAdvert" data-reveal-id="newAdvert">New Advert</a></li>
                     <li class="divider"></li>
                     <li><a href="#" class="translateMe" data-tid="login">Login</a></li>
+                     <li class="divider"></li>
+                     <li class="has-dropdown">
+                        <a href="#"><img src="img/globe.png"></a>
+                        <ul class="dropdown languages"></ul>
+                    </li>
                 </ul>
             </section>
         </nav>
