--- a/www/static/index.html
+++ b/www/static/index.html
@@ -12,9 +12,7 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
-        <div class="loading">
-            <img src="">
-        </div>
+        <div class="loading"></div>
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
                 <li class="name"><h1><a href="#">SALO</a></h1></li>
@@ -73,19 +71,19 @@
 
                     <div class="large-3 columns tr translateMe" data-tid="title">Title</div>
                     <div class="large-9 columns">
-                        <input type="text" tabindex="0" autocomplete="off" name="Title"  data-type="title" data-sid="title" placeholder="Title">
+                        <input type="text" tabindex="0" autocomplete="off" name="Title"  data-type="title" data-sid="title">
                     </div>
 
                     <div class="large-3 columns tr translateMe" data-tid="description">Description</div>
                     <div class="large-9 columns">
-                        <textarea tabindex="0" data-type="text" name="Description" data-sid="text" placeholder="Description"></textarea>
+                        <textarea tabindex="0" data-type="text" name="Description" data-sid="text"></textarea>
                     </div>
 
                     <div class="large-3 columns tr translateMe" data-tid="endDate">End Date</div>
                     <div class="large-9 columns">
                         <div class="row collapse postfix-radius">
                             <div class="small-9 columns">
-                                <input type="text" tabindex="0" class="endDatePicker" autocomplete="off" name="End Date" data-type="date" data-sid="endDate" placeholder="Offer end date" readonly>
+                                <input type="text" tabindex="0" class="endDatePicker" autocomplete="off" name="End Date" data-type="date" data-sid="endDate" readonly>
                             </div>
                             <div class="small-3 columns">
                                 <span class="postfix translateMe" data-tid="date">Date</span>
@@ -102,12 +100,12 @@
 
                     <div class="large-3 columns tr translateMe" data-tid="email">Email</div>
                     <div class="large-9 columns">
-                        <input type="text" tabindex="0" autocomplete="off" name="Email" data-type="email" data-sid="email" placeholder="Email address">
+                        <input type="text" tabindex="0" autocomplete="off" name="Email" data-type="email" data-sid="email">
                     </div>
 
                     <div class="large-3 columns tr translateMe translateMe" data-tid="phone">Phone</div>
                     <div class="large-9 columns">
-                        <input type="text" tabindex="0" autocomplete="off" name="Number" data-type="number" data-sid="phone" placeholder="Phone number">
+                        <input type="text" tabindex="0" autocomplete="off" name="Number" data-type="number" data-sid="phone">
                     </div>
 
                     <div class="large-3 columns tr"></div>
