Fixed name of the field and added sha512.

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -123,7 +123,7 @@
                 <legend class="translateMe" data-tid="login">Login</legend>
                 <div class="row collapse">
                     <div class="small-9 columns">
-                        <input type="text" name="login">
+                        <input type="text" name="username">
                     </div>
                     <div class="small-3 columns">
                         <span class="postfix translateMe" data-tid="username">Username</span>
@@ -173,6 +173,7 @@
         <script type="text/javascript" src="js/foundation-datepicker.js"></script>
         <script type="text/javascript" src="js/defiant.min.js"></script>
         <script type="text/javascript" src="js/salo.jquery.js"></script>
+        <script type="text/javascript" src="js/sha512.js"></script>
 
         <script>
             $(document).ready(function(){
