--- a/www/static/index.html
+++ b/www/static/index.html
@@ -179,7 +179,7 @@
             $(document).ready(function(){
                 $('.tabs-content').salo({
                     links: '.tabs-nav',
-                    source: 'http://192.168.55.55/server/login.php'
+                    source: 'http://192.168.55.55/server/adverts.php'
                 });
 
                 var doc = document.documentElement;
