--- a/www/static/index.html
+++ b/www/static/index.html
@@ -117,7 +117,7 @@
             </fieldset>
         </div>
 
-        <!--Modal NEW ADVERT form-->
+        <!--Modal LOGIN form-->
         <div id="loginModal" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
             <fieldset>
                 <legend class="translateMe" data-tid="login">Login</legend>
@@ -142,12 +142,7 @@
             </fieldset>
         </div>
 
-        <div class="alert-div">
-            <!-- <div data-alert class="alert-box alert">
-                ALERT!
-                <a href="#" class="close">&times;</a>
-            </div> -->
-        </div>
+        <div class="alert-div"></div>
 
         <footer class="row">
             <div class="large-12 columns">
@@ -171,7 +166,6 @@
         <script type="text/javascript" src="js/vendor/jquery.js"></script>
         <script type="text/javascript" src="js/foundation.min.js"></script>
         <script type="text/javascript" src="js/foundation-datepicker.js"></script>
-        <script type="text/javascript" src="js/defiant.min.js"></script>
         <script type="text/javascript" src="js/salo.jquery.js"></script>
         <script type="text/javascript" src="js/sha512.js"></script>
 
