--- a/www/static/index.html
+++ b/www/static/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Salo</title>
+        <title class="translateMe" data-tid="header">Kreved.co</title>
         <link rel="stylesheet" type="text/css" href="css/foundation.css"/>
         <link rel="stylesheet" type="text/css" href="css/custom.css"/>
         <link rel="stylesheet" type="text/css" href="css/foundation-datepicker.css">
@@ -15,7 +15,7 @@
         <div class="loading"></div>
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
-                <li class="name"><h1><a href="#">SALO</a></h1></li>
+                <li class="name"><h1><a href="#" class="translateMe" data-tid="header">Kreved.co</a></h1></li>
             </ul>
             <section class="top-bar-section">
                 <ul class="right">
@@ -166,12 +166,12 @@
         <script type="text/javascript" src="js/vendor/jquery.js"></script>
         <script type="text/javascript" src="js/foundation.min.js"></script>
         <script type="text/javascript" src="js/foundation-datepicker.js"></script>
-        <script type="text/javascript" src="js/salo.jquery.js"></script>
+        <script type="text/javascript" src="js/krevedco.jquery.js"></script>
         <script type="text/javascript" src="js/sha512.js"></script>
 
         <script>
             $(document).ready(function(){
-                $('.tabs-content').salo({
+                $('.tabs-content').krevedco({
                     links: '.tabs-nav',
                     source: 'http://192.168.55.55/server/adverts.php'
                 });
