--- a/www/static/index.html
+++ b/www/static/index.html
@@ -64,11 +64,13 @@
         <div id="newAdvert" class="reveal-modal large" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
             <fieldset>
                 <legend class="translateMe" data-tid="newAdvert">New advert</legend>
-                <div class="large-5 columns drop-file">
-
-                    <!-- <div class="modal image" style="background-image: url('http://placehold.it/1000x1000&amp;text=Select photo');"> </div> -->
-                    <div id="drop_zone" class="drop-file-centered"><span class="dropzone text translateMe" data-tid="dropzone">Drop your files here</span></div>
-                    <input type="file" class="dropzone" data-eval="false" style="opacity:0"> 
+                <div class="large-5 columns dropzone parent">
+                    <div id="drop_zone" class="dropzone centered">
+                        <span class="dropzone text translateMe" data-tid="dropzone">
+                            Drop your files here
+                        </span>
+                    </div>
+                    <input type="file" id="files" class="dropzone" data-eval="false" style="opacity:0"> 
                 </div>
                 <div class="large-7 columns">
 
@@ -173,6 +175,12 @@
 
         <script>
             $(document).ready(function(){
+                 $(document).foundation({
+                    reveal: {
+                        close_on_background_click: false
+                    }
+                });
+                 
                 $('.tabs-content').krevedco({
                     links: '.tabs-nav'
                 });
