Moved errors to static.

--- a/www/static/errors/408.html
+++ b/www/static/errors/408.html
@@ -9,12 +9,16 @@
 				}
 
 				body {
-					background-image: url('img/404.gif');
+					background-image: url('/errors/img/408.gif');
 					background-repeat: no-repeat;
-					background-size: cover;
+					background-size: contain;
+				}
+				h1{
+					color: white;
 				}
 			</style>
 		</head>
 	<body>
+		<h1>408 Request Timeout</h1>
 	</body>
 </html>
