--- a/www/static/errors/404.html
+++ b/www/static/errors/404.html
@@ -2,19 +2,23 @@
 	<html>
 		<head>
 			<meta charset="utf-8">
-			<title>500 Server Error</title>
+			<title>404 Not Found</title>
 			<style type="text/css">
 				html {
 					height: 100%;
 				}
 
 				body {
-					background-image: url('img/500.gif');
+					background-image: url('/errors/img/404.gif');
 					background-repeat: no-repeat;
-					background-size: cover;
+					background-size: contain;
+				}
+				h1{
+					color: white;
 				}
 			</style>
 		</head>
 	<body>
+		<h1>404 Not found</h1>
 	</body>
 </html>
