--- a/www/static/errors/405.html
+++ b/www/static/errors/405.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="utf-8">
-			<title>500 Server Error</title>
+			<title>405 Method Not Allowed</title>
 			<style type="text/css">
 				html {
 					height: 100%;
