--- a/www/static/errors/408.html
+++ b/www/static/errors/408.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="utf-8">
-			<title>404 Not Found</title>
+			<title>408 Request Timeout</title>
 			<style type="text/css">
 				html {
 					height: 100%;
