--- a/www/static/index.html
+++ b/www/static/index.html
@@ -30,6 +30,16 @@
                         </ul>
                     </li> -->
                     <li class="divider"></li>
+
+                    <li class="has-form">
+                        <div class="row collapse">
+                            <div class="large-12 small-9 columns">
+                                <input type="text" placeholder="Find Stuff">
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="divider"></li>
                     <li><a href="#" class="translateMe" data-tid="newAdvert" data-reveal-id="newAdvert">New Advert</a></li>
                     <li class="divider"></li>
                     <li><a href="#" class="translateMe" data-tid="login" data-reveal-id="loginModal">Login</a></li>
